# taskmaster

./: .gitignore  Cargo.toml  Dockerfile  README.md  auteur  env_example.env
.cargo/: config.toml
.github/workflows/: quickstart.yml
daemonize/: Cargo.toml
daemonize/src/: error.rs  file_handler.rs  fork.rs  lib.rs  logger.rs  signal.rs
logger/: Cargo.toml
logger/src/: lib.rs
server/: Cargo.toml
server/src/: connections.rs  main.rs  server.rs  smtp.rs  usage.rs
server/src/controller/: client.rs
server/src/model/: client.rs
src/: main.rs  supervisor.rs
src/controller/: program.rs  programs.rs
src/model/: daemon.rs  mod.rs  program.rs
supervisor/: Cargo.toml
supervisor/src/: lib.rs
supervisor/src/controller/: childprocess.rs  mod.rs  program.rs  programs.rs
supervisor/src/model/: actions.rs  childprocess.rs  error.rs  mod.rs  program.rs  programs.rs
supervisor_ctl/: Cargo.toml
supervisor_ctl/src/: main.rs  supervisor_ctl.rs
supervisor_ctl/src/model/: mod.rs  usage.rs
tests/: README.md  example01.yml
tests/binary/: main.go  tester
tests/binary/success/: success.yml
tests/success/: config.yml
