[package]
name = "taskmaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
chrono = { version = "0.4"}
libc = "0.2"
nix = "0.18"
rlimit = "0.7"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
