[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
daemonize = { path = "../daemonize/" }
libc = { workspace = true }
logger = { path = "../logger" }
serde_yaml = { workspace = true }
serde = { workspace = true }
supervisor = { path = "../supervisor/" }
signal-hook = { version = "0.3", features = ["iterator", "extended-siginfo"] }
