[package]
name = "supervisor_ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
libc = { workspace = true}
serde_yaml = { workspace = true }
serde = { workspace = true }
daemonize = { path="../daemonize" }
server = { path="../server" }
